--- a/css/contact.css
+++ b/css/contact.css
@@ -43,7 +43,7 @@
 
     .contact-info {
         width: 45vw;
-        min-height: 500px;
+        min-height: 490px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -52,8 +52,8 @@
     }
 
     .contact-info h2 {
-        font-size: 160px;
-        font-weight: 600;
+        font-size: 150px;
+        /* font-weight: 600; */
         font-variant-caps: all-petite-caps;
         color: #000;
     }
