--- a/css/style.css
+++ b/css/style.css
@@ -856,7 +856,7 @@ a:hover {
 
 .case-d {
     width: 100%;
-    height: 80vh;
+    /* height: 80vh; */
     display: flex;
     flex-direction: row;
     align-items: flex-end;
@@ -865,13 +865,14 @@ a:hover {
 }
 
 .case-d-text {
-    width: 70%;
+    width: 72%;
 }
 
 .case-d h2 {
+    margin-top: 17vh;
     font-size: 160px;
     line-height: .6;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
 }
 
 .case-d-text-all {
@@ -921,6 +922,7 @@ a:hover {
     width: 100vw;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .case-images img {
@@ -957,4 +959,47 @@ a:hover {
 
 .case-link button:hover {
     background-color: #ff751f;
+}
+
+
+/* ------------------ round img pinoli ---------------- */
+
+.case-images a {
+    padding: 30px 0 70px 0;
+}
+
+img.greet-round-img {
+    animation: 8s linear 0s normal none infinite running rot;
+    -webkit-animation: 8s linear 0s normal none infinite running rot;
+    user-select: none;
+}
+
+@keyframes rot {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes rot {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@media screen and (min-width: 460px) {
+    img.greet-round-img {
+        width: 100px !important;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    img.greet-round-img {
+        width: 100px !important;
+    }
 }
